compiler/tests/success/common/array-copy.jazz
export
fn copy384(reg ptr u32[12] dst src) -> reg ptr u32[12] {
  dst = #copy(src);
  return dst;
}
