compiler/tests/fail/stack_allocation/x86-64/out_of_bounds_read_partial.jazz
export fn main (reg ptr u64[1] r) -> reg u64 {
  reg u64 res = r.[1];
  return res;
}
